--- a/main.tex
+++ b/main.tex
@@ -165,11 +165,17 @@ I plan to assess the capabilities of generative artificial intelligence for scie
 
 \subsection{Introduction}
 
-Following Atoosa Kasirzadeh’s argument for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. I propose building on her arguments by considering three important sub-systems where we should focus efforts to mitigate accumulative risk: i) innovation in generative model architectures which reduce undesirable epistemological characteristics; ii) guiding responsible individual use of generative models through education in science; iii) networks of scientists and the use of generative models for scientific discovery. I argue that these are the most crucial components of civilization where it is desirable to build resilience and avoid accumulative risk.  Furthermore, I argue that formal philosophers capable of interdisciplinary work are well suited to make meaningful headway towards mitigation of accumulative risk in all three areas.
+Following Atoosa Kasirzadeh’s argument for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. I propose building on her arguments by considering three important areas where we should focus efforts to mitigate accumulative risk: i) innovation in generative model architectures which reduce undesirable characteristics, what I term \emph{beneficial dialectical architectures}; ii) guiding responsible individual use of generative models; iii) networks of scientists and the use of generative models for scientific discovery. I argue that these are the most crucial components of civilization where it is desirable to build resilience and avoid accumulative risk.  Furthermore, I argue that formal philosophers capable of interdisciplinary work are well suited to make meaningful headway towards mitigation of accumulative risk in all three areas.
 
 
 
-With respect to the generative AI models themselves, I think philosophers should pay particular attention to what can be called \emph{dialectical architectures.}  There are strong reasons that such architectures may, when properly engineered, be able to meaningfully mitigate some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability). In turn, mitigating these low level issues may also help mitigate accumulative risk for individuals and in scientific networks.  
+With respect to i), I would like to investigate what can be called \emph{dialectical architectures.}  Perhaps the most clear example is a generative adversarial network, but I also consider mixture of expert models and other hybrid architectures which may rely on some fundamental game theory assumptions about interacting sub-components.  Such architectures, when properly engineered, are capable of meaningfully mitigating some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability). 
+
+There is a long historical tradition in philosophy which addresses dialectical mechanisms in rhetoric, argumentation theory, and epistemology.  A dialectic is seen as a process between components (e.g. interlocutors) which leads towards or terminates in a resolution (e.g. a compromise, synthesis, or even truth).  Interdisciplinary projects with philosophers may thus be more likely to result in beneficial dialectical architectures, which in turn may also help mitigate accumulative risk for ii) and iii).
+
+However, I think the architecture of a model will only go so far in promoting responsible use of such models by individuals.  I think it will be worthwhile for philosophers to consider characterizing the epistemological relationship between a user and the generative model.  Currently, this relationship reminds  one much of the consultation of an Oracle.  
+
+%: individual use of generative models and the use of generative models in scientific networks.  
 
 % Perhaps they can also help to encourage non-Oracle use of these models as well.
 
@@ -213,9 +219,11 @@ This is especially important when considering generative AI with the aim of gene
 
 
 
-Social media content optimization algorithms have for some time now affected large populations of humans.  Even small changes in content, distributed widely, are expected to potentially affect the views of individuals within the population.  I think it is fair to consider in a similar context a new class of public-facing \emph{generative} algorithms.  The most widely known is OpenAI's large language model (LLM) called ChatGPT.
+%Social media content optimization algorithms have for some time now affected large populations of humans.  Even small changes in content, distributed widely, are expected to potentially affect the views of individuals within the population.  I think it is fair to consider in a similar context a new class of public-facing \emph{generative} algorithms.  The most widely known is OpenAI's large language model (LLM) called ChatGPT.
 
-With the advent and widespread availability and use of generative LLMs, there is now a new optimization loop which reinforces through human feedback a different class of models.  These models aren't necessarily optimized in order to serve content, but to create linguistic content that satisfies in some way a population of human users.  A computation arms race is rapidly increasing the dedicated and specialized compute to training and improving these models, and also to serve artificial linguistic content to large populations of humans.
+%With the advent and widespread availability and use of generative LLMs, there is now a new optimization loop which reinforces through human feedback a different class of models.  These models aren't necessarily optimized in order to serve content, but 
+
+
 
 
 
@@ -226,9 +234,10 @@ With the advent and widespread availability and use of generative LLMs, there is
 
 Consider a phase space, in which each point represents the total state of every human with agency, and every relevant factor of human civilization.  This complex system has, and will have, a \emph{trajectory} in phase space.  There might be ``peaks'' and ``valleys'' in this space, which represent the grain or currents that characterize in summary things like incentives and disincentives, positive and negative feedback loops, and structural constraints in the world of the system.
 
+Modern large language models, such as ChatGPT, are widely available and used by millions of humans.  These models are optimized to create linguistic content that satisfies in some way a population of human users.  A hardware arms race is rapidly increasing the dedicated and specialized compute to training and improving these models, and also to serve artificial linguistic content to large populations of humans.
 
 
-In a preprint manuscript, Atoosa Kasirzadeh makes a very similar and related point she calls the \emph{accumulative} risk of AI. \citep{Kasirzadeh2024WIP}  It seems to me that central to this accumulative risk is the relationship populations of humans have to widely available generative artificial systems.  Small mistakes and misuses can add up: 
+In a preprint manuscript, Atoosa Kasirzadeh makes a convincing case for what she calls the \emph{accumulative} risk of AI. \citep{Kasirzadeh2024WIP}  It seems to me that central to this accumulative risk is the relationship populations of humans have to widely available generative artificial systems.  Small mistakes and misuses can add up: 
 
 \begin{itemize}
     \item bugs in automatically generated code
@@ -238,9 +247,11 @@ In a preprint manuscript, Atoosa Kasirzadeh makes a very similar and related poi
     \item at the fringe of a majority of a field's understanding---in which case, an error may persist for quite some time
 \end{itemize}
 
-So, if we want to foster \emph{resilience}, it seems to me that we need to focus on making resilient individuals, since they are presumably the smallest ``unit'' or subsystem relevant to the coherent functioning of an interconnected global complex system.  The more resilient individuals, the more robust will be larger subsystems like local organizations and municipalities.
+So, if we want to foster \emph{resilience}, it seems to me that we need to focus on making resilient individuals, since they are presumably the primitive  ``unit'' or subsystem relevant to the coherent functioning of an interconnected global complex system.  The more resilient individuals are, the more robust  larger subsystems like local organizations and municipalities will be.
 
-Furthermore, it seems obvious that some networks of individuals (and associated institutions) are more influential and capable of being robust.  Namely, scientific networks and institutions.  These are the networks with individuals most likely to have developed critical thinking skills able to resist poor usage of AI models.  Unfortunately, the current trend looks poor, as scientists (with certain incentives) appear to be among the first and most frequent users of novel AI models, in particular generative language models.  Specialized models (e.g. for predicting turbulent flow) are of a wholly different character from these language models, which affect the linguistic work flow of scientists in unprecedented ways.
+Furthermore, it seems obvious that some networks of individuals (and associated institutions) are more influential and capable of being robust.  Namely, scientific networks and institutions.  Not just are scientific networks more capable, but I argue it is more important for the whole system that there are resilient scientific networks (as opposed to, say, political or corporate networks).  These are the networks with individuals most likely to have developed critical thinking skills able to resist poor usage of AI models.  Unfortunately, the current trend looks poor, as scientists (with certain incentives) appear to be among the first and most frequent users of novel AI models, in particular generative language models.  Examples of misuse by scientists are already plentiful.  
+
+Specialized models (e.g. for predicting turbulent flow) are of a wholly different character from these language models, which affect the linguistic work flow of scientists in unprecedented ways.
 
 What philosophical views do scientists and developers have, and what epistemological assumptions do they make about AI models?  When one reads, for example, the scientific treatises of some of the smartest people of the twentieth century, there is an astonishing amount of philosophical sophistication.  Much of this has to do with the educational system in Germany and Austria.  But the point is that \emph{it is popular for scientists to forego the philosophy in favor of results and publication}.  The incentives make it so.
 
