Typos, other small changes

--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -75,6 +75,25 @@
 
 
 
+@article{DialecticalGANS2018,
+	abstract = {With more and more SAR applications, the demand for enhanced high-quality SAR images has increased considerably. However, high-quality SAR images entail high costs, due to the limitations of current SAR devices and their image processing resources. To improve the quality of SAR images and to reduce the costs of their generation, we propose a Dialectical Generative Adversarial Network (Dialectical GAN) to generate high-quality SAR images. This method is based on the analysis of hierarchical SAR information and the ``dialectical'' structure of GAN frameworks. As a demonstration, a typical example will be shown, where a low-resolution SAR image (e.g., a Sentinel-1 image) with large ground coverage is translated into a high-resolution SAR image (e.g., a TerraSAR-X image). A new algorithm is proposed based on a network framework by combining conditional WGAN-GP (Wasserstein Generative Adversarial Network---Gradient Penalty) loss functions and Spatial Gram matrices under the rule of dialectics. Experimental results show that the SAR image translation works very well when we compare the results of our proposed method with the selected traditional methods.},
+	article-number = {1597},
+	author = {Ao, Dongyang and Dumitru, Corneliu Octavian and Schwarz, Gottfried and Datcu, Mihai},
+	date-added = {2024-03-22 15:20:54 -0600},
+	date-modified = {2024-03-22 15:20:54 -0600},
+	doi = {10.3390/rs10101597},
+	issn = {2072-4292},
+	journal = {Remote Sensing},
+	number = {10},
+	title = {Dialectical GAN for SAR Image Translation: From Sentinel-1 to TerraSAR-X},
+	url = {https://www.mdpi.com/2072-4292/10/10/1597},
+	volume = {10},
+	year = {2018},
+	Bdsk-Url-1 = {https://www.mdpi.com/2072-4292/10/10/1597},
+	Bdsk-Url-2 = {https://doi.org/10.3390/rs10101597}}
+
+
+
 @phdthesis{Beebe2021,
 	abstract = {Knowledge transfer in cognitive systems can be explicated in terms of structure mapping and control.  The structure of an effective model enables adaptive control for the system's intended domain of application.  Knowledge is transferred by a system when control of a new domain is enabled by mapping the structure of a previously effective model.  I advocate for a model-based view of computation which recognizes effective structure mapping at a low level.  Artificial neural network systems are furthermore viewed as model-based, where effective models are learned through feedback.  Thus, many of the most popular artificial neural network systems are best understood in light of the cybernetic tradition as error-controlled regulators.  Knowledge transfer with pre-trained networks (transfer learning) can, when automated like other machine learning methods, be seen as an advancement towards artificial general intelligence.  I argue this is convincing because it is akin to automating a general systems methodology of knowledge transfer in scientific reasoning.  Analogical reasoning is typical in such a methodology, and some accounts view analogical cognition as the core of cognition which provides adaptive benefits through efficient knowledge transfer.  I then discuss one modern example of analogical reasoning in physics, and how an extended Bayesian view might model confirmation given a structural mapping between two systems. In light of my account of knowledge transfer, I finally assess the case of quantum-like models in cognition, and whether the transfer of quantum principles is appropriate. I conclude by throwing my support behind a general systems philosophy of science framework which emphasizes the importance of structure, and which rejects a controversial view of scientific explanation in favor of a view of explanation as enabling control.},
 	author = {Cameron Beebe},
