--- a/main.tex
+++ b/main.tex
@@ -232,19 +232,19 @@ This is especially important when considering generative AI with the aim of gene
 
 
 
-Consider a phase space, in which each point represents the total state of every human with agency, and every relevant factor of human civilization.  This complex system has, and will have, a \emph{trajectory} in phase space.  There might be ``peaks'' and ``valleys'' in this space, which represent the grain or currents that characterize in summary things like incentives and disincentives, positive and negative feedback loops, and structural constraints in the world of the system.
+Consider a phase space, in which each point represents the total state of every human with agency, and every relevant factor of human civilization.  This complex system has, and will have, a \emph{trajectory} in phase space.  There might be ``peaks'' and ``valleys'' in this space, which represent the grain or currents which are due, in the aggregate, to mechanisms and processes, incentives and disincentives, positive and negative feedback loops, and structural constraints in the world of the system.
 
-Modern large language models, such as ChatGPT, are widely available and used by millions of humans.  These models are optimized to create linguistic content that satisfies in some way a population of human users.  A hardware arms race is rapidly increasing the dedicated and specialized compute to training and improving these models, and also to serve artificial linguistic content to large populations of humans.
+Modern large language models, such as ChatGPT, are widely available and used by millions of humans.  These models are optimized to create linguistic content that impresses in some way a population of human users.  A hardware arms race is rapidly increasing the dedicated and specialized compute to training and improving these models, and also to serve artificial linguistic content to large populations of humans.  These models are improving rapidly not just via reinforcement learning from human feedback (RLHF), but also from architectural innovations in the structure of deployed models.  Such a rapid deployment of new technology of course raises many ethical concerns, but also existential risks.  
 
 
-In a preprint manuscript, Atoosa Kasirzadeh makes a convincing case for what she calls the \emph{accumulative} risk of AI. \citep{Kasirzadeh2024WIP}  It seems to me that central to this accumulative risk is the relationship populations of humans have to widely available generative artificial systems.  Small mistakes and misuses can add up: 
+In a preprint manuscript, Atoosa Kasirzadeh makes a convincing case for what she calls the \emph{accumulative} risk of AI. \citep{Kasirzadeh2024WIP}  It seems to me that central to this accumulative risk is the relationship large populations of humans have to widely available generative artificial systems.  Individual users as well as concentrated or disproportionately accumulating use in influential (scientific) networks are of particular concern.  Small mistakes and misuses can add up: 
 
 \begin{itemize}
-    \item bugs in automatically generated code
+    \item bugs in generated code
     \item relying on generated summaries of articles never read
     \item using generated text in scientific articles
-    \item using them to influence ``novel'' scientific theory or results at the fringe of a particular scientist's understanding or, worse, 
-    \item at the fringe of a majority of a field's understanding---in which case, an error may persist for quite some time
+    \item using generative models to influence `novel' scientific theory or results at the fringe of a particular scientist's understanding or, worse, 
+    \item at the fringe of a majority of a field's understanding---in which case, an error may persist depending on testing and replication resource complexity
 \end{itemize}
 
 So, if we want to foster \emph{resilience}, it seems to me that we need to focus on making resilient individuals, since they are presumably the primitive  ``unit'' or subsystem relevant to the coherent functioning of an interconnected global complex system.  The more resilient individuals are, the more robust  larger subsystems like local organizations and municipalities will be.
@@ -253,9 +253,9 @@ Furthermore, it seems obvious that some networks of individuals (and associated 
 
 Specialized models (e.g. for predicting turbulent flow) are of a wholly different character from these language models, which affect the linguistic work flow of scientists in unprecedented ways.
 
-What philosophical views do scientists and developers have, and what epistemological assumptions do they make about AI models?  When one reads, for example, the scientific treatises of some of the smartest people of the twentieth century, there is an astonishing amount of philosophical sophistication.  Much of this has to do with the educational system in Germany and Austria.  But the point is that \emph{it is popular for scientists to forego the philosophy in favor of results and publication}.  The incentives make it so.
+%What philosophical views do scientists and developers have, and what epistemological assumptions do they make about AI models?  When one reads, for example, the scientific treatises of some of the smartest people of the twentieth century, there is an astonishing amount of philosophical sophistication.  Much of this has to do with the educational system in Germany and Austria.  But the point is that \emph{it is popular for scientists to forego the philosophy in favor of results and publication}.  The incentives make it so.
 
-Atoosa also suggests simulations and modeling of the complex global system, which I wholeheartedly endorse and would like to explore as well.  
+%Atoosa also suggests simulations and modeling of the complex global system, which I wholeheartedly endorse and would like to explore as well.  
 
 
 
@@ -351,6 +351,8 @@ Hierarchical dialectical models (HDMs) represent a potentially novel architectur
 An interesting reference which merges the concept of dialectics with GANs for the purposes of image enhancement (e.g. aerial photos of Munich) is found in \citep{DialecticalGANS2018}.  I find it a bit hasty use of Hegel, but nevertheless the authors use the philosophical theory of thesis, antithesis, synthesis to innovate on model architecture.
 
 
+Another architecture we might consider to be dialectical is so-called Mixture of Experts (MoE).  See e.g. \citep{HFMOE} for a primer on MoE models.  An MoE model has recently been deployed by and integrated into the $\mathbb{X}$ social media platform, and xAI open sourced the weights of their model \texttt{grok} on March 17, 2024.  
+
 % \subsection{Relating Learned Structures to Real Structures}
 
 % Helmholtz, Eddington, etc.
@@ -405,7 +407,7 @@ I will argue that philosophers of science might be more interested in the sort o
 
 
 
-
+Is it feasible for the goal of AI to be ``maximally truth seeking''?  This implies a \emph{process} or \emph{mechanism} which approaches truth or is less wrong over time.  Underlying this is, arguably, an assumption that AI models should not be interacted with as if they are Oracles.  
 
 
 
@@ -456,7 +458,9 @@ If we take seriously any of the arguments from high profile researchers on catas
 
 
 
-Elon has said the goal of AI should be for it to be ``maximally truth seeking''.  This implies a \emph{process} or \emph{mechanism} which approaches truth or is less wrong over time.  Underlying this is, arguably, an assumption that AI models should not be interacted with as if they are Oracles.  Integrated with the $\mathbb{X}$ social media platform, xAI released the weights of their model \texttt{grok} on March 17, 2024.  It was also revealed that grok is a \emph{mixture of experts} model.  See e.g. \citep{HFMOE} for a primer on MoE models.
+
+
+
 
 %Another is mitigating bias, but in a different way than other approaches which seek to balance bias---or even create ideal ``unbiased'' models.  I find these approaches problematic, since 
 
@@ -465,7 +469,7 @@ There is a large amount of literature about bias in artificial neural network mo
 Even if everyone agreed on criteria for an ``unbiased'' model, and everyone agreed to use it, there are fundamental epistemological limitations about whether we will be able to understand when the models are confabulating or nudging in nuanced ways that affect influential actors in society, which in turn affect the trajectory of science or politics in our civilization.
 
 
-[CHECK DIALECTICAL GANS PAPER: DO THEY GO BEYOND HEGELIAN IDEA I.E. Open debate ala JSM etc.]
+%[CHECK DIALECTICAL GANS PAPER: DO THEY GO BEYOND HEGELIAN IDEA I.E. Open debate ala JSM etc.]
 
 
 As a philosopher, we might explain why certain of these architectures overcome limitations and improve on important metrics because they are \emph{beneficially dialectical}.  A beneficially dialectical architecture amounts to a game between components in a machine learning model which lead to equilibrium where undesirable features are minimized.  I am not aware of a comprehensive formal philosophical treatment of this subject, which could prove useful for providing ethical guidance and regulation in AI industry.  While such would be outside the scope of a limited postdoc, my preliminary investigation could I think lead to grant applications on the topic.
@@ -485,10 +489,24 @@ As a philosopher, we might explain why certain of these architectures overcome l
 
 %\textbf{POTENTIAL RESPONSE}: 
 
-There is no free lunch.  \cite{Wolpertetal1997}  Effective models learn bias.  \cite{Mitchell1980}  Maybe even some computational efficiency to go down the route of a cluster of adversarial and biased models. They might also be able to be distributed better on compute devices. [THATS ACTUALLY WHAT FUNSEARCH AND MIX OF EXPERTS DO AND THERE ARE COMPUTATIONAL BENEFITS]
+%There is no free lunch.  \cite{Wolpertetal1997}  Effective models learn bias.  \cite{Mitchell1980}  
+
+Maybe even some computational efficiency to go down the route of a cluster of adversarial and biased models. They might also be able to be distributed better on compute devices. 
+
+[THATS ACTUALLY WHAT FUNSEARCH AND MIX OF EXPERTS DO AND THERE ARE COMPUTATIONAL BENEFITS]
 
 
 
+
+Community Notes is a feature on X (Formerly Twitter) which uses a model based on history of disagreement between users in order to improve fact checking.  
+
+Jensen Huang suggested a model of AGI where there is a super-model taking into account a committee of sub-models who interact to achieve the super-model's goal (determined via a user).
+
+These are dialectical architectures.
+
+
+
+Non-fact confabulations, where there is no agreed upon ground truth (controversial confabulation) or worse, where there is no answer that any human has thought of which could be considered a fact (perhaps due to the nature of the question, etc.)
 
 
 \section{Methodology}
