A lot of editing and rewriting and organizing... intro and first section pretty good.  Need to reduce and reorganize last two sections

--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -75,6 +75,19 @@
 
 
 
+
+
+@book{PopperCR1963,
+	author = {Karl Popper},
+	date-added = {2024-03-24 14:35:17 -0600},
+	date-modified = {2024-03-24 14:36:51 -0600},
+	publisher = {Routledge},
+	title = {Conjectures and Refutations: The Growth of Scientific Knowledge},
+	year = {1963}}
+
+
+
+
 @article{DialecticalGANS2018,
 	abstract = {With more and more SAR applications, the demand for enhanced high-quality SAR images has increased considerably. However, high-quality SAR images entail high costs, due to the limitations of current SAR devices and their image processing resources. To improve the quality of SAR images and to reduce the costs of their generation, we propose a Dialectical Generative Adversarial Network (Dialectical GAN) to generate high-quality SAR images. This method is based on the analysis of hierarchical SAR information and the ``dialectical'' structure of GAN frameworks. As a demonstration, a typical example will be shown, where a low-resolution SAR image (e.g., a Sentinel-1 image) with large ground coverage is translated into a high-resolution SAR image (e.g., a TerraSAR-X image). A new algorithm is proposed based on a network framework by combining conditional WGAN-GP (Wasserstein Generative Adversarial Network---Gradient Penalty) loss functions and Spatial Gram matrices under the rule of dialectics. Experimental results show that the SAR image translation works very well when we compare the results of our proposed method with the selected traditional methods.},
 	article-number = {1597},
