Removed a bunch of redundant.  Still more reductions to go.

--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -76,6 +76,21 @@
 
 
 
+@article{MixtureExperts1991,
+	author = {Jacobs, Robert A. and Jordan, Michael I. and Nowlan, Steven J. and Hinton, Geoffrey E.},
+	date-added = {2024-03-25 09:34:03 -0600},
+	date-modified = {2024-03-25 09:35:03 -0600},
+	doi = {10.1162/neco.1991.3.1.79},
+	journal = {Neural Computation},
+	number = {1},
+	pages = {79-87},
+	title = {Adaptive Mixtures of Local Experts},
+	volume = {3},
+	year = {1991}}
+
+
+
+
 
 @book{PopperCR1963,
 	author = {Karl Popper},
